# sdn_afdx

./: ErmakovaTI_421_readme.txt  conf.sh
afdx/: Makefile.am  Makefile.in  afdx.cc  meta.json  network.cc  network.hh  parametrs.cc  parametrs.hh  vl.cc  vl.hh
netcontrol/: Algorithm.cc  Algorithm.hh  Config.cc  Config.hh  Host.cc  Host.hh  Link.cc  Link.hh  Makefile.am  Makefile.in  Netcontrol.cc  Netcontrol.hh  Network.cc  Network.hh  Settings.cc  Settings.hh  Sla.cc  Sla.hh  Switch.cc  Switch.hh  Topology.cc  Topology.hh  Vl.cc  Vl.hh  Vlset.cc  Vlset.hh  algorithm.cc  algorithm.hh  host.cc  host.hh  meta.json  netcontrol.cc  netcontrol.hh  network.cc  network.hh  parametrs.cc  parametrs.hh  settings.cc  settings.hh  topology.cc  (+5 more)
testing/: netc.xml  packet_crafting_example.py
testing/topos/: 2diff.py  3triangle.py  4Ima.py  5Double.py
